sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value getNomreValeurs
  var ecart = getNomreValeurs() / 2
              ^